syntax = "proto3";

package fitfinder.proto;

option java_package = "com.sample.fitfinder.proto";
option java_multiple_files = true;

import "result.proto";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service SessionProtocol {
    rpc GetAvailableSessionsByRegion(Region) returns (stream UserSessions);
    rpc GetSession(SessionRequest) returns (UserSession);
    rpc AddSession(AddSessionRequest) returns (Response);
    rpc EditSession(EditSessionRequest) returns (Response);
    rpc SubscribeToUserSession(google.protobuf.Empty) returns (stream UserSession);

    rpc BookSession(BookSessionRequest) returns (Response);
    rpc SubscribeToSessionBooking(google.protobuf.Empty) returns (stream UserSession);
}

message SessionRequest {
    int64 sessionId = 1;
}

message BookSessionRequest {
    int64 sessionId = 1;
}

message AddSessionRequest {
    string title = 1;
    string description = 2;
    google.protobuf.Timestamp sessionDateTime = 3;
    LatLng location = 4;
    string locationString = 5;
    bool isOnline = 6;
    bool isInPerson = 7;
    double price = 8;
    google.protobuf.Duration duration = 9;
}

message UserSessions {
    repeated UserSession sessions = 1;
}

message UserSession {
    int64 sessionId = 1;
    int64 trainerUserId = 2;
    string title = 3;
    string description = 4;
    google.protobuf.Timestamp sessionDateTime = 5;
    LatLng location = 6;
    string locationString = 7;
    bool isOnline = 8;
    bool isInPerson = 9;
    double price = 10;
    google.protobuf.Duration duration = 11;
    google.protobuf.Int64Value bookingId = 12;
    google.protobuf.Int64Value clientUserId = 13;
    BookingStatus bookingStatus = 14;
}

message EditSessionRequest {
    int64 sessionId = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp sessionDateTime = 4;
    LatLng location = 5;
    string locationString = 6;
    bool isOnline = 7;
    bool isInPerson = 8;
    double price = 9;
    google.protobuf.Duration duration = 10;
    int64 trainerUserId = 11;
}

message Region {
    LatLng northEastBound = 1;
    LatLng southWestBound = 2;
}

message LatLng {
    double latitude = 1;
    double longitude = 2;
}

enum BookingStatus {
    Unknown = 0;
    Pending = 1;
    Confirmed = 2;
    Cancelled = 3;
}