syntax = "proto3";

package fitfinder.proto;

option java_package = "com.sample.fitfinder.proto";
option java_multiple_files = true;

import "result.proto";

import "google/protobuf/empty.proto";

service UserProtocol {
    rpc ConnectUser(ConnectUserRequest) returns (stream ConnectUserResponse);
    rpc SubscribeToUserProfile(google.protobuf.Empty) returns (stream UserProfile);
    rpc UpdateUserProfile(UpdateUserProfileRequest) returns (Response);
    rpc GetUserProfile(UserProfileRequest) returns (LimitedUserProfile);
}

message ConnectUserRequest {
    string googleTokenId = 1;
}

message ConnectUserResponse {
    enum Status {
        Verifying = 0;
        Creating = 1;
        Retrieving = 2;
        Connected = 3;
        Failed = 4;
    }
    Status status = 1;
    UserProfile userProfile = 2;
}

message UpdateUserProfileRequest {
    string displayName = 1;
    string email = 2;
    string profilePictureUri = 3;
}

message UserProfileRequest {
    int64 userId = 1;
}

message UserProfile {
    int64 id = 1;
    string googleId = 2;
    string displayName = 3;
    string email = 4;
    string profilePictureUri = 5;
    UserRole userRole = 6;

    enum UserRole {
        Unknown = 0;
        Admin = 1;
        Trainer = 2;
        User = 3;
    }
}

message LimitedUserProfile {
    int64 userId = 1;
    string displayName = 2;
    string email = 3;
    string profilePictureUri = 4;
}